# sbeve-telegram-2

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/models/: events.py  telegram.py
src/routers/: google_auth_router.py  ics_router.py  responses.py  telegram_router.py
src/services/: google_auth.py  google_events.py  ics_utils.py  utilities.py
src/services/telegram/: incoming_message_classifiers.py  incoming_message_handlers.py  incoming_message_parsers.py  send_functions.py  telegram_utils.py
tests/models/: test_events.py
