[tool.poetry]
name = "sbeve-telegram"
version = "0.1.0"
description = ""
authors = ["Zhu Weiji <zhuweiji1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ics = "^0.7.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = {extras = ["all"], version = "^0.85.0"}
python-dotenv = "^0.21.0"
dateparser = "^1.1.1"
pytest = "^7.1.3"
httpx = "^0.23.0"
google-api-python-client = "^2.63.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
